{{$NEXT}}

    - add deleteMessage method for deleting messages
    - reply method now passes additional args straight through to sendMessage
    - enable automatic testing on every push, via GitHub Actions

0.024     2023-10-10 12:41:52+01:00 Europe/London

    - sending messages now warns on errors, but never fails (kk12l) (GH#5)
    - add sendDocument method to send file messages

0.023     2023-08-14 13:18:20+03:00 Europe/Helsinki

	- warn rather than crashing, on an unknown update type
	- add test for this behaviour change
	- change dist.ini to reflect that it's me releasing

0.021     2019-07-01 10:34:13+09:30 Australia/Adelaide

    - Documentation fixes
    - Add some examples

0.020     2019-06-30 22:27:39+09:30 Australia/Adelaide

    - Rework API to better reflect the actual bot API - methods
      now have the same name as the corresponding Telegram ones,
      and make them return the corresponding objects as well.
      This is a breaking change!

0.012     2019-06-28 16:52:52+09:30 Australia/Adelaide

    - add missing dependency

0.011     2019-06-28 14:22:57+09:30 Australia/Adelaide

    - fix kwalitee issues
    - META.json
    - use a modern Mojolicious version

0.010     2016-12-22

    - improve documentation and metadata

0.009     2016-12-22

    - allow the criteria to be specified with a simple regex

0.008     2016-10-25

    - return response from send_message_to_chat_id and send_to_chat_id
      for capturing things like the message_id

0.007     2016-10-19

    - added Changelog :-)
    - added support for constructing and sending images